--- a/ACM_Website.css
+++ b/ACM_Website.css
@@ -269,7 +269,7 @@ h7{
 footer{
   display: flex;
   height:130px;
-  background-color: #18195A;
+  background-color: #03045E;
   flex-direction: column;
   justify-content: center;
   margin-top: 85px;
